_generated-doc/3.15/config/quarkus-rest-client.adoc
:summaryTableId: quarkus-rest-client_quarkus-rest-client
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-rest-client_quarkus-rest-client-provider-autodiscovery]] [.property-path]##link:#quarkus-rest-client_quarkus-rest-client-provider-autodiscovery[`quarkus.rest-client.provider-autodiscovery`]##

[.description]
--
Whether providers (filters, etc.) annotated with `jakarta.ws.rs.ext.Provider` should be automatically registered for all the clients in the application.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_PROVIDER_AUTODISCOVERY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_PROVIDER_AUTODISCOVERY+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

|===


:!summaryTableId: