_generated-doc/3.20/config/quarkus-rest-client.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-rest-client_quarkus-rest-client-disable-smart-produces]] [.property-path]##link:#quarkus-rest-client_quarkus-rest-client-disable-smart-produces[`quarkus.rest-client.disable-smart-produces`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.disable-smart-produces+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
By default, RESTEasy Reactive uses text/plain content type for String values and application/json for everything else.

MicroProfile Rest Client spec requires the implementations to always default to application/json. This build item disables the "smart" behavior of RESTEasy Reactive to comply to the spec


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_DISABLE_SMART_PRODUCES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_DISABLE_SMART_PRODUCES+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-rest-client_quarkus-rest-client-provider-autodiscovery]] [.property-path]##link:#quarkus-rest-client_quarkus-rest-client-provider-autodiscovery[`quarkus.rest-client.provider-autodiscovery`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.provider-autodiscovery+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether providers (filters, etc.) annotated with `jakarta.ws.rs.ext.Provider` should be automatically registered for all the clients in the application.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_PROVIDER_AUTODISCOVERY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_PROVIDER_AUTODISCOVERY+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

|===

